# pramen

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  dist-workspace.toml  lefthook.yml  mise.toml  renovate.json  rust-toolchain.toml
.cargo/: config.toml
.config/: nextest.toml
.githooks/: README.md  pre-commit  pre-push
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  perf.yml
benchmarks/: parquet-to-postgres.yaml
compare/docetl/: README.md  extract-tickets.yaml
compare/redpanda-connect/: README.md  classify-tickets.yaml
compare/redpanda-connect/fixtures/: tickets.ndjson
corpora/: support-tickets.v1.yaml
corpora/support-tickets/: tickets.json
crates/pramen/: Cargo.toml
crates/pramen-ai/: Cargo.toml
crates/pramen-ai/benches/: governance.rs
crates/pramen-ai/examples/: gen_corpus.rs  rq2_memoization.rs
crates/pramen-ai/src/: budget.rs  dispatch.rs  error.rs  eval.rs  ledger.rs  lib.rs  operator.rs  reuse.rs  review.rs  schema.rs  workkey.rs
crates/pramen-ai/src/ledger/: mod.rs  postgres.rs  sqlite.rs
crates/pramen-ai/src/provider/: bedrock.rs  mock.rs  mod.rs  openai_compat.rs
crates/pramen-ai/tests/: bedrock_batch.rs  openai_batch.rs  provider_faults.rs
crates/pramen-core/: Cargo.toml
crates/pramen-core/examples/: generate_connector_matrix.rs  generate_schema.rs
crates/pramen-core/src/: checkpoint.rs  lib.rs  observe.rs
crates/pramen-core/src/connector/: conformance.rs  mod.rs  registry.rs  types.rs
crates/pramen-core/src/runtime/: mod.rs  stages.rs  tests.rs
crates/pramen-core/src/spec/: component_ref.rs  error.rs  mod.rs  tests.rs  types.rs  validate.rs
crates/pramen-io/: Cargo.toml
crates/pramen-io/benches/: copy_encode.rs
crates/pramen-io/examples/: datafusion_direct.rs  gen_bench_data.rs
crates/pramen-io/src/: flight_sql.rs  lib.rs  source.rs  sql.rs
crates/pramen-io/src/postgres/: encode.rs  mod.rs
crates/pramen-testkit/: Cargo.toml
crates/pramen-testkit/src/: env.rs  http.rs  lib.rs
crates/pramen-wasm/: Cargo.toml
crates/pramen-wasm/fixtures/: s1_4_guest.wasm
crates/pramen-wasm/src/: cache.rs  error.rs  host.rs  ipc.rs  lib.rs  limits.rs  transform.rs
crates/pramen-wasm/src/oci/: allowlist.rs  mod.rs  pull.rs  signature.rs
crates/pramen-wasm/tests/: integration.rs  oci.rs
crates/pramen-wasm/wit/: transform.wit
crates/pramen/src/: dispatch_plan.rs  evaluate.rs  inspect.rs  main.rs  review.rs  run.rs  transform_test.rs
crates/pramen/tests/: deploy_artifacts.rs
deploy/: README.md
deploy/container/: Dockerfile  compose.yaml  otel-collector.yaml
deploy/examples/: aws-s3-to-aurora.yaml  env.example
deploy/grafana/: pramen-runtime.json
deploy/systemd/: pramen.env.example  pramen.service  pramen.timer
docs/: architecture.md  implementation-plan.md  vocabulary.md
docs/adr/: 0000-template.md  0001-native-postgres-copy-not-adbc-in-v1.md  0002-wasm-transforms-deferred-from-v1.md  0003-sqlite-wal-inference-ledger.md  0004-windows-tier-one-target.md  0005-local-first-testing-strategy.md  0006-file-checkpoints-at-least-once.md  0007-fan-out-commit-barrier.md  0008-flight-sql-default-binary.md  0009-local-only-ollama-acceptance.md  0010-defer-adbc-first-warehouse.md
docs/benchmarks/: 2026-07-12-v1.md  2026-07-22-local-ollama-competitors.md  compare-scoreboard.json  compare-scoreboard.md
docs/compare/: orientation.md
docs/connectors/: support-matrix.md
docs/deploy/: aws-runbook.md
docs/release/: v0.1-checklist.md  v0.2-checklist.md
docs/research/: artifact-evaluation.md  artifact-manifest.json  e2-1-dispatch-frontier.md  e2-1-dispatch-policy.md  local-ollama-frontier.md  paper-draft.md  paper-outline.md  rq2-memoization-metrics.json  rq2-memoization.md
docs/research/local-ollama/20260722T083111Z-openai-compat-llama3_2_3b/: items.jsonl  report.json
docs/schema/: pipeline.v1alpha1.schema.json
docs/spikes/: s1-1-ledger-bedrock.md  s1-2-parquet-datafusion.md  s1-3-postgres-copy.md  s1-4-wasm-arrow.md
docs/superpowers/plans/: 2026-07-22-connector-sdk.md
docs/superpowers/specs/: 2026-07-21-competitive-comparison-design.md  2026-07-21-flight-sql-sink-design.md  2026-07-22-connector-sdk-design.md
examples/: governed-enrichment.yaml  local-fanout-two-sinks.yaml  local-parquet-to-flight-sql.yaml  local-parquet-to-postgres.yaml  local-tickets-ai-classify-batch.yaml  local-tickets-ai-classify.yaml  local-tickets-ai-generate.yaml  local-wasm-gross.yaml
examples/external-wasm-guest/: README.md  build.sh
examples/external-wasm-guest/guest/: Cargo.toml
examples/external-wasm-guest/guest/src/: lib.rs
scripts/: bench.sh  compare-scoreboard.sh  perf-gate.sh  quickstart.sh  release-quickstart.sh  reproduce-artifact.sh  rq2-memoization.sh  validate-deploy.sh
site/: astro.config.mjs  package.json  pnpm-workspace.yaml
site/src/components/: PipelineFlow.astro
site/src/content/docs/: index.mdx
site/src/content/docs/concepts/: architecture.mdx  governed-ai.mdx  pipeline-spec.md  runtime.mdx
site/src/content/docs/cookbook/: ai-extraction.md  aws-deploy.md  filter-and-derive.md  incremental-enrichment.md  local-testing.md  object-store-sources.md  postgres-loading.md  s3-sources.md  wasm-transforms.md
site/src/styles/: custom.css
spikes/s1-1-ledger-bedrock/: Cargo.toml
spikes/s1-1-ledger-bedrock/src/: ledger.rs  main.rs  provider.rs  runner.rs  stub.rs  workkey.rs
spikes/s1-2-parquet-datafusion/: Cargo.toml
spikes/s1-2-parquet-datafusion/src/: main.rs
spikes/s1-3-postgres-copy/: Cargo.toml
spikes/s1-3-postgres-copy/src/: encoder.rs  main.rs
spikes/s1-4-wasm-arrow/: README.md
spikes/s1-4-wasm-arrow/guest/: Cargo.toml
spikes/s1-4-wasm-arrow/guest/src/: lib.rs
spikes/s1-4-wasm-arrow/host/: Cargo.toml
spikes/s1-4-wasm-arrow/host/src/: main.rs
templates/wasm-transform-rust/: README.md  build.sh
templates/wasm-transform-rust/guest/: Cargo.toml
templates/wasm-transform-rust/guest/src/: lib.rs
templates/wasm-transform-rust/wit/: transform.wit
(+10 files in other folders)
