[workspace]
resolver = "3"
# Spikes are disposable and deliberately outside the workspace gates.
exclude = ["spikes"]
members = [
    "crates/pramen",
    "crates/pramen-core",
    "crates/pramen-io",
    "crates/pramen-ai",
    "crates/pramen-wasm",
]

[workspace.package]
version = "0.0.1"
# Flipped at the first public release (P2.2).
publish = false
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/akovari/pramen"

[workspace.dependencies]
# Pinned to the arrow major used by our datafusion version.
arrow = { version = "56", default-features = false }
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
datafusion = "50"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
sha2 = "0.10"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
thiserror = "2"
tokio-postgres = "0.7"
tokio = { version = "1", default-features = false }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
