[workspace]
resolver = "3"
# Spikes are disposable and deliberately outside the workspace gates.
exclude = ["spikes"]
members = [
    "crates/pramen",
    "crates/pramen-core",
    "crates/pramen-io",
    "crates/pramen-ai",
    "crates/pramen-testkit",
    "crates/pramen-wasm",
]

[workspace.package]
version = "0.1.0"
# First public release (P2.2).
publish = false
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/akovari/pramen"

[workspace.dependencies]
# Pinned to the arrow major used by our datafusion version.
arrow = { version = "56", default-features = false }
async-trait = "0.1"
# default-features off: the SDKs' default `rustls` feature drags the legacy
# hyper 0.14 + rustls 0.21 stack (RUSTSEC-2026-0098/0099/0104); the
# `default-https-client` stack is rustls 0.23.
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio", "credentials-process", "sso"] }
aws-sdk-bedrock = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-bedrockruntime = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
criterion = "0.7"
datafusion = "50"
futures = "0.3"
object_store = { version = "0.12", features = ["aws", "azure", "gcp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
sha2 = "0.10"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
thiserror = "2"
tokio-postgres = "0.7"
tokio = { version = "1", default-features = false }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
