[package]
name = "pramen-ai"
description = "Governed semantic operators, provider adapters, and the durable inference ledger for Pramen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
arrow = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-bedrockruntime = { workspace = true }
pramen-core = { path = "../pramen-core" }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Evaluation corpora are versioned YAML documents.
serde_yaml_ng = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
# `time` for the provider-batch poll interval.
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
pramen-testkit = { path = "../pramen-testkit" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "governance"
harness = false

[lints]
workspace = true
