[package]
name = "pramen-core"
description = "Pipeline specification, plans, runtime, channels, checkpoints, and observability for Pramen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]

[lints]
workspace = true
