[package]
name = "pramen-core"
description = "Pipeline specification, plans, runtime, channels, checkpoints, and observability for Pramen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
arrow = { workspace = true }
async-trait = { workspace = true }
opentelemetry = { version = "0.32.0", default-features = false, features = ["metrics"] }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["metrics", "http-proto", "reqwest-blocking-client", "reqwest-rustls"] }
opentelemetry_sdk = { version = "0.32.1", default-features = false, features = ["metrics"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time", "net"] }
tokio-postgres = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }

[dev-dependencies]
pramen-testkit = { path = "../pramen-testkit" }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[lints]
workspace = true
