[package]
name = "pramen-io"
description = "File formats, object-store sources, and database sinks for Pramen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
arrow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }
pramen-core = { path = "../pramen-core" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "net"] }
tokio-postgres = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
