[package]
name = "pramen-io"
description = "File formats, object-store sources, and database sinks for Pramen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
arrow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true }
pramen-core = { path = "../pramen-core" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "net"] }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "copy_encode"
harness = false

[lints]
workspace = true
