[package]
name = "pramen-wasm"
description = "WebAssembly component transform ABI for Pramen (post-v1 extensibility milestone)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]

[lints]
workspace = true
