[package]
name = "pramen-wasm"
description = "WebAssembly component transform ABI for Pramen (Phase 2 extensibility)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
arrow = { workspace = true, features = ["ipc"] }
async-trait = { workspace = true }
pramen-core = { path = "../pramen-core" }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
wasmtime = "38"
wasmtime-wasi = "38"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
