[package]
name = "pramen"
description = "Pramen: a lean, columnar data movement and transformation runtime with governed LLM enrichment"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

# The workspace sets publish = false until the first public release; this
# opts the binary back in for dist release builds.
[package.metadata.dist]
dist = true

[dependencies]
clap = { workspace = true }
pramen-core = { path = "../pramen-core" }
pramen-io = { path = "../pramen-io" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
