# Standalone: spikes are disposable and deliberately outside the workspace
# and its gates (see AGENTS.md).
[workspace]

[package]
name = "s1-1-ledger-bedrock"
version = "0.0.1"
publish = false
edition = "2024"

[dependencies]
anyhow = "1.0.103"
aws-config = "1.8.11"
aws-sdk-bedrockruntime = "1.95.0"
aws-smithy-types = "1.3.4"
jsonschema = { version = "0.47.0", default-features = false }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.23.4", features = ["v4"] }